test/Fail/Issue476a.agda
{-# OPTIONS --warning=error #-}

-- Useless private

module Issue476a where

A : Set₁
private
  A = Set
